syntax = "proto3";

option go_package = "github.com/jamesTait-jt/goflow/cmd/goflow/goflow";

package goflow;

service GoFlow {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc PushTask (PushTaskRequest) returns (PushTaskReply) {}
  rpc GetResult (GetResultRequest) returns (GetResultReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message PushTaskRequest {
  string taskType = 1;
  string payload = 2;
}

message PushTaskReply {
  string id = 1;
}

message GetResultRequest {
  string taskID = 1;
}

message GetResultReply {
  string result = 1;
}